kind/dev-pods/dev-sarthak/routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev-sarthak
spec:
  ingressClassName: nginx
  rules:
    - host: sarthak.podcraft.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-app
                port:
                  number: 80
