kind/dev-pods/dev-sarthak/deny-sarthak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dev-sarthak
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
